# Hackathon-GIG-2026

./: .gitignore  CMakeLists.txt  README.md
MeshData/: Main.cpp  MeshData.cpp  MeshData.hpp  Utils.cpp  Utils.hpp  meshData.py
SurfaceVolume/: Main.cpp
include/: AstroProperties.hpp  Boulder_dataset_profiles.hpp  Boulder_detector.hpp  Boulder_profiles.hpp  MeshData.hpp  MeshTypes.hpp
src/: AstroProperties.cpp  Boulder_detector.cpp  MeshData.cpp  main.cpp
